# Zephyr-Embedded

./: README.md
oslib/ahu_drivers/ahu_hci/: ahu_hci.c  ahu_hci.h  ahu_uart.c  ahu_uart.h  bsu_base.c  bsu_base.h  shell_cli.c  shell_cli.h  snode_linked_list.c  snode_linked_list.h
prac1/: README.md
prac1/ahu/: CMakeLists.txt  prj.conf
prac1/ahu/boards/: esp32c3_devkitm.overlay
prac1/ahu/src/: main.c
prac2/bsu/: CMakeLists.txt  bt.conf  make.sh  prj.conf
prac2/bsu/src/: main.c
prac2/dv/: dataviewer.py
prac3/base/: CMakeLists.txt  console.conf  prj.conf  usb_cdc.conf
prac3/base/src/: main.c
prac3/ml_model/: model  training_set.csv
prac3/viewer/: extra.py  viewer.py
